@@ -1,6 +1,9 @@
 #include "CoreMaterialsLibrary.hpp"
 #include "CubitInterface.hpp"
+#include "CubitMessage.hpp"
 #include "CalculiXCoreInterface.hpp"
+#include "loadUserOptions.hpp"
+#include "HDF5Tool.hpp"
 
 
 CoreMaterialsLibrary::CoreMaterialsLibrary()
@@ -18,6 +21,8 @@ bool CoreMaterialsLibrary::init()
     CalculiXCoreInterface *ccx_iface = new CalculiXCoreInterface();
 
     is_initialized = true;
+    this->load_library();
+
     return true;
   }
 }
@@ -36,4 +41,14 @@ bool CoreMaterialsLibrary::reset()
 bool CoreMaterialsLibrary::check_initialized()
 {
   return is_initialized;
+}
+
+bool CoreMaterialsLibrary::load_library()
+{
+  //HDF5Tool hdf5Tool(ccx_uo.mPathMaterialLibrary.toStdString().c_str());
+
+  std::string log = "Loading Library\n";
+  PRINT_INFO("%s", log.c_str());
+
+  return true;
 }
