@@ -22,6 +22,7 @@ UserOptionsPanel::UserOptionsPanel(QWidget *parent) :
   HBoxLayout_6 = new QHBoxLayout();
   HBoxLayout_7 = new QHBoxLayout();
   HBoxLayout_8 = new QHBoxLayout();
+  HBoxLayout_9 = new QHBoxLayout();
   label_1 = new QLabel();
   label_2 = new QLabel();
   label_3 = new QLabel();
@@ -30,6 +31,7 @@ UserOptionsPanel::UserOptionsPanel(QWidget *parent) :
   label_6 = new QLabel();
   label_7 = new QLabel();
   label_8 = new QLabel();
+  label_9 = new QLabel();
   label_1->setFixedWidth(labelWidth);
   label_2->setFixedWidth(labelWidth);
   label_3->setFixedWidth(labelWidth);
@@ -38,6 +40,7 @@ UserOptionsPanel::UserOptionsPanel(QWidget *parent) :
   label_6->setFixedWidth(labelWidth);
   label_7->setFixedWidth(labelWidth);
   label_8->setFixedWidth(labelWidth);
+  label_9->setFixedWidth(labelWidth);
   lineEdit_1 = new QLineEdit();
   lineEdit_2 = new QLineEdit();
   lineEdit_3 = new QLineEdit();
@@ -46,6 +49,7 @@ UserOptionsPanel::UserOptionsPanel(QWidget *parent) :
   lineEdit_6 = new QLineEdit();
   lineEdit_7 = new QLineEdit();
   checkBox_8 = new QCheckBox();
+  lineEdit_9 = new QLineEdit();
 
   // Layout
   GridLayout->addLayout(VBoxLayout,0,0, Qt::AlignTop);
@@ -57,6 +61,7 @@ UserOptionsPanel::UserOptionsPanel(QWidget *parent) :
   VBoxLayout->addLayout(HBoxLayout_6);
   VBoxLayout->addLayout(HBoxLayout_7);
   VBoxLayout->addLayout(HBoxLayout_8);
+  VBoxLayout->addLayout(HBoxLayout_9);
   VBoxLayout->addItem(vertical_spacer);
 
   HBoxLayout_1->addWidget(label_1);
@@ -75,6 +80,8 @@ UserOptionsPanel::UserOptionsPanel(QWidget *parent) :
   HBoxLayout_7->addWidget(lineEdit_7);
   HBoxLayout_8->addWidget(label_8);
   HBoxLayout_8->addWidget(checkBox_8);
+  HBoxLayout_9->addWidget(label_9);
+  HBoxLayout_9->addWidget(lineEdit_9);
 
   isInitialized = true;
 }
@@ -92,6 +99,7 @@ void UserOptionsPanel::refresh_settings()
   label_6->setText(ccx_uo.mPathIconsName);
   label_7->setText(ccx_uo.mPathPythonInterfaceName);
   label_8->setText(ccx_uo.mSaveLoadedResultsName);
+  label_9->setText(ccx_uo.mPathMaterialLibraryName);
 
   lineEdit_1->setText(ccx_uo.mPathSolver);
   lineEdit_2->setText(QString::number(ccx_uo.mSolverThreads));
@@ -101,6 +109,7 @@ void UserOptionsPanel::refresh_settings()
   lineEdit_6->setText(ccx_uo.mPathIcons);
   lineEdit_7->setText(ccx_uo.mPathPythonInterface);
   checkBox_8->setChecked(ccx_uo.mSaveLoadedResults);
+  lineEdit_9->setText(ccx_uo.mPathMaterialLibrary);
 
 }
 
@@ -114,4 +123,5 @@ void UserOptionsPanel::save_settings()
   ccx_uo.mPathIcons = lineEdit_6->text();
   ccx_uo.mPathPythonInterface = lineEdit_7->text();
   ccx_uo.mSaveLoadedResults = checkBox_8->isChecked();
+  ccx_uo.mPathMaterialLibrary = lineEdit_9->text();
 }
